# IDE-rust

./: Cargo.toml  README.md  new_file.txt
src/: app.rs  filesystem.rs  main.rs  models.rs  theme.rs
